--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body class="h-full min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/heroui-chat-script@0/dist/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/heroui-chat-script@beta/dist/select-and-edit-utils.global.js"></script>
   </body>
